infra/global/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    env: prod
    managed-by: gitops

---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    env: staging
    managed-by: gitops

---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    env: infra
    managed-by: gitops

---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    env: observability
    managed-by: gitops,
