infra/global/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: staging-default-deny
  namespace: staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-whoami-http
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: whoami
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prod-default-deny
  namespace: prod
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-whoami-prod-http
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: whoami-prod
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 80
